fix teamcard mix blend mod on safari

--- a/src/components/TeamCard/styles.scss
+++ b/src/components/TeamCard/styles.scss
@@ -51,6 +51,7 @@
       z-index: 1;
       opacity: var(--opacity-0);
       transition: 0.2s;
+      mix-blend-mode: multiply;
     }
   }
 
